--- a/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
+++ b/app/frontend/src/components/AnalysisPanel/AnalysisPanel.module.css
@@ -6,4 +6,22 @@
     word-wrap: break-word;
     padding-top: 12px;
     padding-bottom: 12px;
+    word-break: break-all;
 }
+
+.analysisLabel {
+    color: rgba(115, 118, 225, 1);
+    font-weight: 700;
+}
+
+.analysisText {
+    word-break: break-all;
+}
+
+.analysisSeparator {
+    color: rgba(27, 37, 89, 1);
+    font-weight: 700;
+    font-size: 14px;
+}
+
+
