--- a/app/frontend/src/components/Answer/Answer.module.css
+++ b/app/frontend/src/components/Answer/Answer.module.css
@@ -3,10 +3,11 @@
 
 .answerContainer {
     padding: 20px;
-    background: rgb(249, 249, 249);
+    background: #ffff;
     border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
     outline: transparent solid 1px;
+    border: 1px solid rgba(67, 24, 255, 1);
 }
 
 .answerLogo {
@@ -17,7 +18,6 @@
     font-size: 16px;
     font-weight: 400;
     line-height: 22px;
-    padding-top: 16px;
     padding-bottom: 16px;
     white-space: pre-line;
 }
