--- a/app/frontend/src/components/FolderPicker/FolderPicker.module.css
+++ b/app/frontend/src/components/FolderPicker/FolderPicker.module.css
@@ -1,19 +1,30 @@
 .folderArea {
     display: flex;
     flex-direction: column;
-    justify-content: right;
-    width: 600px;
+    justify-content: center;
+    /* width: 600px; */
     padding-bottom: 20px;
-  }
 
-  .folderSelection {
+    label {
+        font-family: "Montserrat", sans-serif !important;
+        color: #011e3d;
+    }
+}
+
+
+.folderSelection {
     display: flex;
     flex-direction: row;
     padding-bottom: 5px;
     justify-content: left;
     text-align: left;
-  }
+}
 
-  .actionButton {
+.actionButton {
     width: 180px;
-  }
+    text-align: left;
+
+    i {
+        color: black;
+    }
+}
