--- a/app/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/app/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -16,12 +16,13 @@
 .questionInputTextArea {
     width: 100%;
     line-height: 40px;
+    margin-top: 15px;
 }
 
 .questionInputButtonsContainer {
     display: flex;
     flex-direction: column;
-    justify-content: flex-end;
+    justify-content: center;
 }
 
 .questionInputSendButton {
@@ -41,14 +42,14 @@
 .questionClearChatButton {
     display: flex;
     width: 50px;
-    height: 50px; 
+    height: 50px;
     cursor: pointer;
-    border: 2px solid rgba(140,140,140,1);
+    /* border: 2px solid rgba(140,140,140,1); */
     -webkit-border-radius: 50px;
     border-radius: 50px;
     -o-text-overflow: ellipsis;
     text-overflow: ellipsis;
-    background: rgb(125,125,125);
+    /* background: rgb(125,125,125); */
     padding-left: -12px;
     justify-content: center;
     align-items: center;
