--- a/app/frontend/src/components/SupportingContent/SupportingContent.module.css
+++ b/app/frontend/src/components/SupportingContent/SupportingContent.module.css
@@ -19,13 +19,16 @@
     display: flex;
     flex-direction: column;
     padding: 20px;
+    border: 1px solid #504ee0;
 }
 
 .supportingContentItemHeader {
     margin: 0;
+    padding-bottom: 1rem;
 }
 
 .supportingContentItemText {
     margin-bottom: 0;
     font-weight: 300;
+    font-size: 14px;
 }
