--- a/app/frontend/src/components/TagPicker/TagPicker.module.css
+++ b/app/frontend/src/components/TagPicker/TagPicker.module.css
@@ -1,4 +1,3 @@
-
 .rootClass {
     max-width: 800px;
 }
@@ -9,21 +8,33 @@
 
 .tagPicker {
     background-color: white;
+    border-radius: 8px;
+    border: 1px solid #e9eff6;
 }
 
 .tagArea {
     display: flex;
     flex-direction: column;
-    justify-content: right;
-    width: 600px;
+    justify-content: center;
     padding-bottom: 20px;
-  }
+
+    label {
+        font-family: "Montserrat", sans-serif !important;
+        color: #011e3d;
+    }
+}
 
 .tagSelection {
     display: flex;
     flex-direction: row;
     padding-bottom: 5px;
-    justify-content: left;
     text-align: left;
     height: 90px;
- }  
+}
+
+.tagName {
+    font-size: 14px;
+    padding-bottom: 1rem;
+    font-weight: 600;
+    font-family: "Segoe UI", "Segoe UI Web (West European)", "Segoe UI", -apple-system, BlinkMacSystemFont, Roboto, "Helvetica Neue", sans-serif;
+}
