--- a/app/frontend/src/components/UserChatMessage/UserChatMessage.module.css
+++ b/app/frontend/src/components/UserChatMessage/UserChatMessage.module.css
@@ -1,7 +1,7 @@
 /* Copyright (c) Microsoft Corporation.
    Licensed under the MIT license. */
 
-.container {
+   .container {
     display: flex;
     justify-content: flex-end;
     margin-bottom: 20px;
@@ -10,9 +10,10 @@
 }
 
 .message {
-    padding: 20px;
-    background: #e8ebfa;
-    border-radius: 8px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
+    padding: 10px;
+    background: #ffff;
+    border-radius: 16px 0 16px 16px;
     outline: transparent solid 1px;
+    box-shadow: 9px 12px 29px 0px rgba(112, 144, 176, 0.2), 9px 12px 20px 0px rgba(112, 144, 176, 0.2);
 }
+
