--- a/app/frontend/src/components/filepicker/drop-zone.module.css
+++ b/app/frontend/src/components/filepicker/drop-zone.module.css
@@ -7,31 +7,41 @@
     align-items: center;
     justify-content: center;
     width: 100%;
-  }
-  
-  .banner_text {
-    font-size: 1.5rem;
+    max-width: 550px;
+}
+
+.banner_text {
+    font-size: 1rem;
     color: #929090;
     display: block;
     margin: 0.5rem 0;
-  }
-  
-  .banner {
+}
+
+.banner_link {
+    font-size: 1rem;
+    color: #2499ef;
+    cursor: pointer;
+    text-decoration: underline;
+    display: block;
+    margin: 0.5rem 0;
+}
+
+.banner {
     background-color: #fafafa;
     width: 100%;
-    border: 4px dashed #969595;
     height: 200px;
     display: flex;
+    border-radius: 8px;
     flex-direction: column;
     align-items: center;
     justify-content: center;
     margin-bottom: 1rem;
     cursor: pointer;
-  }
-  
-  .input {
+    border: #4318ff 1px solid;
+}
+
+.input {
     width: 100%;
     height: 100%;
     display: none;
-  }
-  
+}
