--- a/app/frontend/src/pages/content/Content.module.css
+++ b/app/frontend/src/pages/content/Content.module.css
@@ -59,7 +59,7 @@
   .topPivot {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    /* justify-content: center; */
     width: 100%;
   }
   
