--- a/app/frontend/src/components/QuestionInput/QuestionInput.module.css
+++ b/app/frontend/src/components/QuestionInput/QuestionInput.module.css
@@ -4,7 +4,7 @@
 .questionInputContainer {
     border-radius: 8px;
     box-shadow: 0px 8px 16px rgba(0, 0, 0, 0.14), 0px 0px 2px rgba(0, 0, 0, 0.12);
-    height: 90px;
+    max-height: 170px;
     width: 100%;
     padding-top: 15px;
     padding-bottom: 15px;
@@ -16,7 +16,16 @@
 .questionInputTextArea {
     width: 100%;
     line-height: 40px;
-    margin-top: 15px;
+    /* margin-top: 35px; */
+    overflow: auto;
+
+    textarea::placeholder {
+        padding-top: 15px;
+    }
+
+    textarea:focus::placeholder {
+        color: transparent;
+    }
 }
 
 .questionInputButtonsContainer {
@@ -36,7 +45,7 @@
 .questionClearButtonsContainer {
     height: 100%;
     vertical-align: middle;
-    padding-top: 5px;
+    /* padding-top: 25px; */
 }
 
 .questionClearChatButton {
